package com.uml.a4composition;

// Room class representing a room component
public class Room {
    // Room class definition
    // (Additional attributes and methods can be added as needed)
}
